# nyan-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/glad/: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
res/shaders/: default.frag  default.vert
src/: Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  main.cpp
